# ev-buying-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml  requirements-render.txt  requirements.txt
.playwright-mcp/: page-2026-07-02T07-32-23-134Z.yml  page-2026-07-02T07-33-31-881Z.yml  page-2026-07-02T07-45-04-487Z.yml  page-2026-07-02T07-51-29-233Z.yml  page-2026-07-02T07-56-12-925Z.yml  page-2026-07-02T07-57-59-017Z.yml  page-2026-07-02T08-39-44-444Z.yml
app/backend/: package-lock.json  package.json  server.js
app/frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.js
app/frontend/src/: App.jsx  styles.css
app/frontend/src/components/: InsightsDashboard.jsx  VehicleRecommendations.jsx
app/frontend/src/data/: vehicles.json
app/frontend/src/utils/: insightsStorage.js  vehicleMatcher.js
docs/: ai-workflow-reflection.md  executive-summary.md  render-backend-deploy.md
models/: classification_leaderboard.csv  ev_transition_artifact.joblib  regression_leaderboard.csv  test_metrics.json
quarto/: analysis-report.qmd  presentation.qmd
src/ev_transition/: __init__.py  config.py  data.py  eda.py  features.py  model.py  predict.py  predict_worker.py  run_all.py  train.py
tests/: test_predict_formatting.py  test_targets.py
